--- a/blogspot.html
+++ b/blogspot.html
@@ -9,8 +9,11 @@
     <script src='main.js'></script>
 </head>
 <body>
-
-    <h1>Aqui vamos hacer un blog spot</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo atractivo he interesante del post</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus totam sed ex porro! Recusandae, nobis fugiat maxime exercitationem quibusdam nulla facere fuga modi quo, rem quos voluptas facilis dolorem impedit.</p>
+        </div>
+    </div>
 </body>
 </html>
