--- a/blogspot.html
+++ b/blogspot.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            <h3>Cabecera</h3>
+        </div>
         <div id="post">
             <h1>Este es el titulo atractivo he interesante del post</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus totam sed ex porro! Recusandae, nobis fugiat maxime exercitationem quibusdam nulla facere fuga modi quo, rem quos voluptas facilis dolorem impedit.</p>
