--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <h3>Cabecera</h3>
+            Hyperblog   
+            <span id="tagline">Tu blog confianza</span> 
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo he interesante del post</h1>
