--- a/blogspot.html
+++ b/blogspot.html
@@ -13,6 +13,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo he interesante del post</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus totam sed ex porro! Recusandae, nobis fugiat maxime exercitationem quibusdam nulla facere fuga modi quo, rem quos voluptas facilis dolorem impedit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus assumenda corrupti, nulla vero quidem nemo eaque. Expedita est corporis asperiores distinctio autem iste accusantium suscipit. Corrupti placeat magnam eaque recusandae!</p>
         </div>
     </div>
 </body>
